--- a/qz.html
+++ b/qz.html
@@ -60,6 +60,7 @@
              <h3 class="my-4"><b>Basta adquirir nosso método, clique no botão abaixo e adquira</b></h3>
 
             <!-- VSL -->
+            <script type="text/javascript" id="scr_62467302752ce7000849417c">var s=document.createElement("script");s.src="https://cdn.converteai.net/f3f38ed1-aa3e-4ebd-9b5d-a18f569076a3/players/62467302752ce7000849417c/player.js",s.async=!0,document.head.appendChild(s);</script>
           
 
             <!-- Botão 1 -->
