--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>6 INGREDIENTES SIMPLES QUE FAZEM O CORPO QUEIMAR ATÉ 13KG EM 30 DIAS</b></h3>
+            <h3 class="my-4"><b>6 Ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
 
             <!-- VSL -->
             <script type="text/javascript" id="scr_6242458c752ce70008ea1f09">var s=document.createElement("script");s.src="https://cdn.converteai.net/f3f38ed1-aa3e-4ebd-9b5d-a18f569076a3/players/6242458c752ce70008ea1f09/player.js",s.async=!0,document.head.appendChild(s);</script>
