--- a/qz2.html
+++ b/qz2.html
@@ -123,7 +123,7 @@
       document.getElementById("terceira").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://mulhersemprefeliz.online/"
+      location.href = "https://mulhersemprefeliz.online/pg2"
     }
   </script>
    
