--- a/pg4.html
+++ b/pg4.html
@@ -59,11 +59,10 @@
             <h3 class="my-4"><b>6 Ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_6242458c752ce70008ea1f09">var s=document.createElement("script");s.src="https://cdn.converteai.net/f3f38ed1-aa3e-4ebd-9b5d-a18f569076a3/players/6242458c752ce70008ea1f09/player.js",s.async=!0,document.head.appendChild(s);</script>
-
+            <script type="text/javascript" id="scr_625226719ed2820009384650">var s=document.createElement("script");s.src="https://cdn.converteai.net/f3f38ed1-aa3e-4ebd-9b5d-a18f569076a3/players/625226719ed2820009384650/player.js",s.async=!0,document.head.appendChild(s);</script>
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/LOt0XpA" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/LOt0XpA?src=pg4" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
@@ -440,7 +439,7 @@
             </div>
             <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/LOt0XpA" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/LOt0XpA?src=pg4" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
@@ -455,7 +454,7 @@
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1530000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1224000); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
