--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>6 Ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
+               <h3 class="my-4"><b>6 Ingredientes Simples Que Fazem O Corpo Queimar Mais de <span style="color:#FC0000;font-size:42px">15Kg</span> Em <span style="color:#FC0000;font-size:42px">30 Dias!</span></b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_6253651c752ce700095b11fd">var s=document.createElement("script");s.src="https://cdn.converteai.net/f3f38ed1-aa3e-4ebd-9b5d-a18f569076a3/players/6253651c752ce700095b11fd/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <script type="text/javascript" id="scr_6256e3d29ed282000b239532">var s=document.createElement("script");s.src="https://cdn.converteai.net/f3f38ed1-aa3e-4ebd-9b5d-a18f569076a3/players/6256e3d29ed282000b239532/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/LOt0XpA?src=Pg1" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/LOt0XpA" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
@@ -440,7 +440,7 @@
             </div>
             <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/LOt0XpA?src=Pg1" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/LOt0XpA" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
