--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-               <h3 class="my-4"><b>6 Ingredientes Simples Que Fazem O Corpo Queimar Até <span style="color:#FC0000;font-size:42px">13Kg</span> Em <span style="color:#FC0000;font-size:42px">30 Dias!</span></b></h3>
+           <h3 class="my-4"><b>6 Ingredientes Simples Que Fazem O Corpo Queimar Mais de <span style="color:#FC0000;font-size:42px">15Kg</span> Em <span style="color:#FC0000;font-size:42px">30 Dias!</span></b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_6256e3d29ed282000b239532">var s=document.createElement("script");s.src="https://cdn.converteai.net/f3f38ed1-aa3e-4ebd-9b5d-a18f569076a3/players/6256e3d29ed282000b239532/player.js",s.async=!0,document.head.appendChild(s);</script>
+           <script type="text/javascript" id="scr_6256e3d29ed282000b239532">var s=document.createElement("script");s.src="https://cdn.converteai.net/f3f38ed1-aa3e-4ebd-9b5d-a18f569076a3/players/6256e3d29ed282000b239532/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
@@ -455,7 +455,7 @@
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1637000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1530000); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
